--- a/BatmanMadBelt/Base.lproj/Main.storyboard
+++ b/BatmanMadBelt/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="landscape" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -10,12 +11,148 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" userLabel="ARView" customClass="ViewController" customModule="BatmanMadBelt" customModuleProvider="target" sceneMemberID="viewController">
-                    <arView key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <view key="view" contentMode="scaleToFill" id="08c-rY-TWd" customClass="ARView" customModule="RealityKit">
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </arView>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KRD-xh-H3N">
+                                <rect key="frame" x="94" y="20" width="41.5" height="41.5"/>
+                                <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="KRD-xh-H3N" secondAttribute="height" id="PFH-73-7DS"/>
+                                </constraints>
+                                <state key="normal" title="Menu"/>
+                                <connections>
+                                    <action selector="openBeltMenu:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iKg-M9-hvK"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jKE-CB-JB6">
+                                <rect key="frame" x="133" y="414" width="630" height="81"/>
+                                <subviews>
+                                    <view alpha="0.20000000000000001" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CF6-oH-MJD">
+                                        <rect key="frame" x="195" y="-24" width="240" height="128"/>
+                                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Buq-Nu-FNv" userLabel="SlotOne">
+                                        <rect key="frame" x="0.0" y="-23.5" width="126" height="128"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoBat" translatesAutoresizingMaskIntoConstraints="NO" id="DNv-fB-Adq">
+                                                <rect key="frame" x="-1" y="0.0" width="128" height="128"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="DNv-fB-Adq" secondAttribute="height" id="aT9-Cd-ksC"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="DNv-fB-Adq" firstAttribute="centerX" secondItem="Buq-Nu-FNv" secondAttribute="centerX" id="CMZ-6v-VHi"/>
+                                            <constraint firstItem="DNv-fB-Adq" firstAttribute="height" secondItem="Buq-Nu-FNv" secondAttribute="height" id="Y9W-r6-BDC"/>
+                                            <constraint firstItem="DNv-fB-Adq" firstAttribute="centerY" secondItem="Buq-Nu-FNv" secondAttribute="centerY" id="tjH-7k-0OA"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q0j-GZ-ndl" userLabel="SlotTwo">
+                                        <rect key="frame" x="126" y="-23.5" width="126" height="128"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoBat" translatesAutoresizingMaskIntoConstraints="NO" id="B5g-OG-vuU">
+                                                <rect key="frame" x="-1" y="0.0" width="128" height="128"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="B5g-OG-vuU" secondAttribute="height" id="s4h-gL-ixW"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="B5g-OG-vuU" firstAttribute="centerX" secondItem="Q0j-GZ-ndl" secondAttribute="centerX" id="6Wr-pX-oB8"/>
+                                            <constraint firstItem="B5g-OG-vuU" firstAttribute="height" secondItem="Q0j-GZ-ndl" secondAttribute="height" id="Nps-QP-OZK"/>
+                                            <constraint firstItem="B5g-OG-vuU" firstAttribute="centerY" secondItem="Q0j-GZ-ndl" secondAttribute="centerY" id="pUG-XF-eAo"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hhv-5m-9dE">
+                                        <rect key="frame" x="378" y="-23.5" width="126" height="128"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoBat" translatesAutoresizingMaskIntoConstraints="NO" id="o8J-C3-8wl">
+                                                <rect key="frame" x="-1" y="0.0" width="128" height="128"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="o8J-C3-8wl" secondAttribute="height" id="fxo-W2-mOF"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="o8J-C3-8wl" firstAttribute="centerY" secondItem="hhv-5m-9dE" secondAttribute="centerY" id="dRL-gl-3Uw"/>
+                                            <constraint firstItem="o8J-C3-8wl" firstAttribute="height" secondItem="hhv-5m-9dE" secondAttribute="height" id="xj8-Yv-2Q9"/>
+                                            <constraint firstItem="o8J-C3-8wl" firstAttribute="centerX" secondItem="hhv-5m-9dE" secondAttribute="centerX" id="yer-7M-pDv"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VpY-bQ-ZiR" userLabel="SlotFour">
+                                        <rect key="frame" x="504" y="-23.5" width="126" height="128"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoBat" translatesAutoresizingMaskIntoConstraints="NO" id="jpC-0N-t9D">
+                                                <rect key="frame" x="-1" y="0.0" width="128" height="128"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="jpC-0N-t9D" secondAttribute="height" id="vJ2-XY-sTh"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="jpC-0N-t9D" firstAttribute="centerX" secondItem="VpY-bQ-ZiR" secondAttribute="centerX" id="5Ea-c7-aSE"/>
+                                            <constraint firstItem="jpC-0N-t9D" firstAttribute="height" secondItem="VpY-bQ-ZiR" secondAttribute="height" id="PD5-ua-s7B"/>
+                                            <constraint firstItem="jpC-0N-t9D" firstAttribute="centerY" secondItem="VpY-bQ-ZiR" secondAttribute="centerY" id="eNJ-Br-HHw"/>
+                                        </constraints>
+                                    </view>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoBat" translatesAutoresizingMaskIntoConstraints="NO" id="Eqp-8S-FvK">
+                                        <rect key="frame" x="252" y="4" width="126" height="73"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="VpY-bQ-ZiR" secondAttribute="trailing" id="06V-Fz-x1c"/>
+                                    <constraint firstItem="Buq-Nu-FNv" firstAttribute="leading" secondItem="jKE-CB-JB6" secondAttribute="leading" id="7sY-bk-Wp1"/>
+                                    <constraint firstItem="hhv-5m-9dE" firstAttribute="height" secondItem="jKE-CB-JB6" secondAttribute="height" multiplier="1.58025" id="8dE-3i-ElX"/>
+                                    <constraint firstItem="Buq-Nu-FNv" firstAttribute="height" secondItem="jKE-CB-JB6" secondAttribute="height" multiplier="1.58025" id="9MU-lU-UIV"/>
+                                    <constraint firstItem="hhv-5m-9dE" firstAttribute="width" secondItem="jKE-CB-JB6" secondAttribute="width" multiplier="0.2" id="BdZ-xS-deC"/>
+                                    <constraint firstItem="hhv-5m-9dE" firstAttribute="centerY" secondItem="jKE-CB-JB6" secondAttribute="centerY" id="Eji-io-vDx"/>
+                                    <constraint firstItem="Eqp-8S-FvK" firstAttribute="width" secondItem="jKE-CB-JB6" secondAttribute="width" multiplier="0.2" id="IOG-ye-K1A"/>
+                                    <constraint firstItem="VpY-bQ-ZiR" firstAttribute="height" secondItem="jKE-CB-JB6" secondAttribute="height" multiplier="1.58025" id="IUZ-fa-8aq"/>
+                                    <constraint firstItem="Eqp-8S-FvK" firstAttribute="centerX" secondItem="jKE-CB-JB6" secondAttribute="centerX" id="PDj-8U-6eb"/>
+                                    <constraint firstItem="Eqp-8S-FvK" firstAttribute="height" secondItem="jKE-CB-JB6" secondAttribute="height" multiplier="0.9" id="TLw-vP-apo"/>
+                                    <constraint firstItem="Q0j-GZ-ndl" firstAttribute="height" secondItem="jKE-CB-JB6" secondAttribute="height" multiplier="1.58025" id="Ubt-87-kLI"/>
+                                    <constraint firstItem="Q0j-GZ-ndl" firstAttribute="leading" secondItem="Buq-Nu-FNv" secondAttribute="trailing" id="bZG-nR-vIN"/>
+                                    <constraint firstItem="VpY-bQ-ZiR" firstAttribute="centerY" secondItem="jKE-CB-JB6" secondAttribute="centerY" id="beD-N2-j6f"/>
+                                    <constraint firstItem="VpY-bQ-ZiR" firstAttribute="width" secondItem="jKE-CB-JB6" secondAttribute="width" multiplier="0.2" id="cSr-o4-sKf"/>
+                                    <constraint firstItem="VpY-bQ-ZiR" firstAttribute="leading" secondItem="hhv-5m-9dE" secondAttribute="trailing" id="e0R-WS-dLv"/>
+                                    <constraint firstItem="Buq-Nu-FNv" firstAttribute="centerY" secondItem="jKE-CB-JB6" secondAttribute="centerY" id="kZ1-SH-KE5"/>
+                                    <constraint firstItem="Eqp-8S-FvK" firstAttribute="centerY" secondItem="jKE-CB-JB6" secondAttribute="centerY" id="kie-t3-f3b"/>
+                                    <constraint firstItem="Buq-Nu-FNv" firstAttribute="width" secondItem="jKE-CB-JB6" secondAttribute="width" multiplier="0.2" id="l7c-5e-RvY"/>
+                                    <constraint firstItem="Q0j-GZ-ndl" firstAttribute="centerY" secondItem="jKE-CB-JB6" secondAttribute="centerY" id="tM4-wc-TTd"/>
+                                    <constraint firstItem="Q0j-GZ-ndl" firstAttribute="width" secondItem="jKE-CB-JB6" secondAttribute="width" multiplier="0.2" id="tu9-2D-J5Z"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="KRD-xh-H3N" firstAttribute="leading" secondItem="bGy-mg-HoW" secondAttribute="leading" constant="50" id="M4u-OJ-9HV"/>
+                            <constraint firstItem="jKE-CB-JB6" firstAttribute="top" secondItem="08c-rY-TWd" secondAttribute="bottom" id="MD5-nx-2Jv"/>
+                            <constraint firstItem="KRD-xh-H3N" firstAttribute="top" secondItem="bGy-mg-HoW" secondAttribute="top" constant="20" id="PzU-Ao-cgb"/>
+                            <constraint firstItem="CF6-oH-MJD" firstAttribute="top" secondItem="jKE-CB-JB6" secondAttribute="top" id="p7e-iF-NQ7"/>
+                            <constraint firstItem="KRD-xh-H3N" firstAttribute="height" secondItem="08c-rY-TWd" secondAttribute="height" multiplier="0.1" id="ywe-1L-biQ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="bGy-mg-HoW"/>
+                    </view>
                     <connections>
-                        <outlet property="arView" destination="8bC-Xf-vdC" id="TPV-4x-avp"/>
+                        <outlet property="arView" destination="08c-rY-TWd" id="HmR-6X-36D"/>
+                        <outlet property="beltColoredView" destination="CF6-oH-MJD" id="rtT-UK-c2e"/>
+                        <outlet property="beltMenuButton" destination="KRD-xh-H3N" id="Vu0-nj-hBF"/>
+                        <outlet property="beltMenuView" destination="jKE-CB-JB6" id="2a8-yN-zmT"/>
+                        <outlet property="slotFour" destination="VpY-bQ-ZiR" id="SAt-Tf-NM7"/>
+                        <outlet property="slotFourImageView" destination="jpC-0N-t9D" id="Opu-aX-Y8S"/>
+                        <outlet property="slotOne" destination="Buq-Nu-FNv" id="IGq-nR-T6k"/>
+                        <outlet property="slotOneImageView" destination="DNv-fB-Adq" id="n0g-39-dAx"/>
+                        <outlet property="slotThree" destination="hhv-5m-9dE" id="PfP-2a-REe"/>
+                        <outlet property="slotThreeImageView" destination="o8J-C3-8wl" id="ndP-TO-W6O"/>
+                        <outlet property="slotTwo" destination="Q0j-GZ-ndl" id="MsO-gx-FAA"/>
+                        <outlet property="slotTwoImageView" destination="B5g-OG-vuU" id="kI3-uA-Ltx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -23,4 +160,7 @@
             <point key="canvasLocation" x="138" y="134"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LogoBat" width="126" height="73"/>
+    </resources>
 </document>
